New Features and Important Changes in GammaLib 1.5.0

7 August 2017


1. Introduction
---------------
This document briefly summarizes module by module the most important changes
made since the last release of GammaLib.


2. Public interface modifications
---------------------------------
The following classes have been added:
- n.a.

The following classes have been removed:
- n.a.

The following classes have been renamed:
- n.a.

The following methods have been added:
- GTime(std::string&)
- GTime::set(const std::string& time)
- GApplicationPar::time()
- GApplicationPar::time(GTime&)

The following methods have been removed:
- n.a.

The following methods have been renamed:
- n.a.

The arguments for the following methods have been changed:
- n.a.

The return value of the following methods has been changed:
- n.a.


3. Configuration
-----------------
None


4. Application module
---------------------
A time parameter with type "t" has been added to allow specifying time values in
various formats to time systems to an application (#1864).


5. Base module
--------------
None


6. FITS I/O Interface
---------------------
None


7. Linear algebra module
------------------------
None


8. Model module
---------------
None


9. Numerics module
------------------
None


10. Observation module
----------------------
A time string constructor and set method has been added to GTime to allow
setting various time formats from a string (#1864).


11. Optimization module
-----------------------
None


12. Sky module
--------------
None


13. Support module
------------------
None


14. XML module
--------------
None


15. VO module
-------------
None


16. Xspec module
----------------
None


17. Test module
---------------
None


18. Multi-wavelength interface
------------------------------
None


19. Fermi-LAT interface
----------------------
None


20. CTA interface
-----------------
None



21. COMPTEL interface
---------------------
None